gl51-master/src/test/deca/context/invalid/testObject_rule3_42.deca
//Description
//new sur un objet qui n'est pas une class

class A {}
{
    int b;
    A a = new b(); //error
}
//passed
